add card's style

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 </head>
 <body>
     
-    <div class="container text-center p-4">
-        <h1>Meet our team</h1>
-        <p class="my-5">
+    <div class="container p-4">
+        <h1 class="text-center text-danger ">Meet our team</h1>
+        <p class="my-5 text-center">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod aut autem voluptates odio, debitis laboriosam recusandae praesentium soluta, maiores laudantium voluptate incidunt sunt quos illum, velit vero. Quo, fugiat rem!
         </p>
 
         <section id="cards">
-            <div class="row">
-               <!--  <div class="col-4 d-flex bg-dark">
-                    <div class="card-left">
-                        <img class="image" src="./assets/img/male1.png" alt="" width="100">
-                    </div>
-                    <div class="card-right p-3">
-                        <h3 class="name text-white">NAME</h3>
-                        <div class="job text-white">JOB</div>
-                        <div class="email text-primary">EMAIL</div>
+            <div class="row g-4">
+                <!-- <div class="col-4 bg-dark">
+                    <div class="card">
+                        <div class="card-left">
+                            <img class="image" src="./assets/img/male1.png" alt="" width="100">
+                        </div>
+                        <div class="card-right p-3">
+                            <h3 class="name text-white">NAME</h3>
+                            <div class="job text-white">JOB</div>
+                            <div class="email text-primary">EMAIL</div>
+                        </div>
                     </div>
                 </div> -->
             </div>
