--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </p>
 
         <section id="cards">
-            <div class="row g-4">
+            <div class="row g-3 my-5">
                 <!-- <div class="col-4 bg-dark">
                     <div class="card">
                         <div class="card-left">
@@ -33,6 +33,8 @@
                 </div> -->
             </div>
         </section>
+
+        
     </div>
 
 
