add form for new members

--- a/index.html
+++ b/index.html
@@ -34,7 +34,24 @@
             </div>
         </section>
 
-        
+        <form id="member-form">
+            <div class="mb-3">
+                <input type="text" class="form-control" name="name" placeholder="Type your name">
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control" name="role" placeholder="Type your role">
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control" name="email" placeholder="Type your email">
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control" name="image" placeholder="https://your_image.jpg">
+            </div>
+
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary" >Submit</button>
+            </div>
+        </form>
     </div>
 
 
